--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -35,6 +35,7 @@ h4,
 p,
 li {
   font-family: sans-serif;
+  color: #444;
 }
 
 /* footer p {
@@ -62,3 +63,26 @@ li {
 .related {
   list-style: none;
 }
+
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
+
+.main-header {
+  background-color: #f7f7f7;
+}
+
+aside {
+  background-color: #f7f7f7;
+  /* border: 5px solid #1098ad; */
+  /* border-left: 5px solid #1098ad; */
+  /* border-right: 5px solid #1098ad; */
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+
+/* body {
+  background-color: blue;
+} */
