--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -86,3 +86,29 @@ aside {
 /* body {
   background-color: blue;
 } */
+
+li:first-child {
+  font-weight: bold;
+}
+
+li:last-child {
+  font-style: italic;
+}
+
+/* 
+li:nth-child(2) {
+  color: red;
+}
+
+li:nth-child(odd) {
+  color: red;
+}
+
+li:nth-child(even) {
+  color: red;
+}
+ */
+
+/* article p:last-child {
+  color: red;
+} */
