Ch. 31 - CSS Theory #1: Conflicts Between Selectors

--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -51,10 +51,6 @@ li {
   font-size: 18px;
 }
 
-#copyright {
-  font-size: 16px;
-}
-
 .related-author {
   font-size: 18px;
   font-weight: bold;
@@ -134,3 +130,21 @@ a:active {
   background-color: black;
   font-style: italic;
 }
+
+/* resolving conflicts */
+/* 
+#copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green !important;
+} */
