Ch. 32 - CSS Theroy #2: Inheritance and the Universal Selector

--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,3 +1,13 @@
+/* * {
+  border-top: 10px solid #1098ad;
+} */
+
+body {
+  color: #444;
+  font-family: sans-serif;
+  /* border-top: 10px solid #1098ad; */
+}
+
 h1 {
   /* color: blue; */
   font-size: 26px;
@@ -26,16 +36,6 @@ p {
 
 li {
   font-size: 20px;
-}
-
-h1,
-h2,
-h3,
-h4,
-p,
-li {
-  font-family: sans-serif;
-  color: #444;
 }
 
 /* footer p {
@@ -148,3 +148,13 @@ a:active {
 footer p {
   color: green !important;
 } */
+
+/* nav a:link,
+nav strong {
+  font-size: 18px;
+} */
+
+/* nav {
+  font-size: 18px;
+}
+ */
