--- a/starter/03-CSS-Fundamentals/notes/style.css
+++ b/starter/03-CSS-Fundamentals/notes/style.css
@@ -1,3 +1,34 @@
 img {
   width: 1000px;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  color: #444;
+  background-color: #f7f7f7;
+}
+
+p {
+  margin: 10px 0;
+}
+
+ul, ol {
+  margin-left: 22px;
+}
+
+.chapter {
+  margin-bottom: 40px;
+}
+
+.chapter-heading {
+  margin-bottom: 20px;
+}
+
+.chapter-sub-section, .lecture-slide {
+  margin-bottom: 15px;
+}
+
+.chapter-sub-section-heading {
+  margin-bottom: 7px;
+}
