--- a/starter/03-CSS-Fundamentals/notes/style.css
+++ b/starter/03-CSS-Fundamentals/notes/style.css
@@ -1,13 +1,14 @@
 * {
+  background-color: #f7f7f7;
+  color: #444;
   margin: 0;
   padding: 0;
-  color: #444;
-  background-color: #f7f7f7;
 }
 
 .page-container {
   width: 825px;
   margin: 50px auto;
+  font-family: arial;
 }
 
 img {
