--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -56,6 +56,8 @@ h2 {
   text-transform: uppercase;
   font-weight: 500;
   display: inline-block;
+  /* simply has to be g.t. the height of the element */
+  border-radius: 1000px;
 }
 
 .btn:hover,
@@ -71,6 +73,10 @@ h2 {
 .btn--small {
   font-size: 14px;
   padding: 8px 12px;
+}
+
+img {
+  border-radius: 12px;
 }
 
 /* ------------------------ */
@@ -131,6 +137,7 @@ img {
   background-color: #087f5b;
   color: #fff;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -153,6 +160,12 @@ img {
 /* CHAIRS */
 .chair {
   box-shadow: 0 20px 30px 0px rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+}
+
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .chair-box {
